# furigana4md

./: .gitignore  README.md  furigana  pyproject.toml
furigana4epub/: furigana4epub.py  furigana4md.py
